
2011-12-14
		* Further change to the fortran files (all open and write 
		  statements are commented out), compiling checked on win 7

2011-12-12
		* fit.mpt.Rd updated examples to make use of make.mpt()

		* Changed the fortran files to suppress creating output files.

		* Changed DESCRIPTION to inform about the difference to MPTinR (1).

		* resolved small bug that prevented using fit.mpt with a model object.

2011-10-21

		* First Version of the new MPTinR (for now called MPTinR2)
		