@@ -1,5 +1,7 @@
 
 2011-12-14
+		* make.mpt(): changed to a generic
+
 		* Further change to the fortran files (all open and write 
 		  statements are commented out), compiling checked on win 7
 
